backend/vulnerability_analysis/testing/bof2/segments/klee-out-0/test000003.external.err
Error: failed external call: __ubsan_handle_divrem_overflow
File: testing/bof2/segments/segment_1_klee.c
Line: 10
assembly.ll line: 7931
State: 8
Stack: 
	#000007931 in obfuscate(138615497687040, 138613350203392, 138617645170688) at testing/bof2/segments/segment_1_klee.c:10
	#100008098 in __klee_posix_wrapped_main() at testing/bof2/segments/segment_1_klee.c:21
	#200006080 in __user_main(1, 139841173979136, 139841173979152) at src/runtime/POSIX/klee_init_env.c:245
	#300000534 in __uClibc_main(139825395007488, 1, 139841173979136, 0, 0, 0, 0) at libc/misc/internals/__uClibc_main.c:401
	#400000699 in main(1, 139841173979136)
